<resources>
    <string name="app_name">phone list</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="recover_password">Recover password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="usernametext">Username:</string>
    <string name="passwordtext">Password:</string>
    <string name="type_the_username">Type the username</string>
    <string name="type_the_password">Type the password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
</resources>